--- a/DictionaryBlazor/src/Api/Core/DictionaryBlazor.Api.Domain/DictionaryBlazor.Api.Domain.csproj
+++ b/DictionaryBlazor/src/Api/Core/DictionaryBlazor.Api.Domain/DictionaryBlazor.Api.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\DictionaryBlazor.Common\DictionaryBlazor.Common.csproj" />
+  </ItemGroup>
+
 </Project>
