created context seed with bogus library

--- a/DictionaryBlazor/src/Api/Infrastructure/DictionaryBlazor.Infrastructure.Persistence/DictionaryBlazor.Infrastructure.Persistence.csproj
+++ b/DictionaryBlazor/src/Api/Infrastructure/DictionaryBlazor.Infrastructure.Persistence/DictionaryBlazor.Infrastructure.Persistence.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\DictionaryBlazor.Common\DictionaryBlazor.Common.csproj" />
     <ProjectReference Include="..\..\Core\DictionaryBlazor.Api.Domain\DictionaryBlazor.Api.Domain.csproj" />
   </ItemGroup>
 
