--- a/DictionaryBlazor/src/Api/WebApi/DictionaryBlazor.Api.WebApi/DictionaryBlazor.Api.WebApi.csproj
+++ b/DictionaryBlazor/src/Api/WebApi/DictionaryBlazor.Api.WebApi/DictionaryBlazor.Api.WebApi.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\DictionaryBlazor.Infrastructure.Persistence\DictionaryBlazor.Infrastructure.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
