--- a/DictionaryBlazor/src/Api/WebApi/DictionaryBlazor.Api.WebApi/appsettings.Development.json
+++ b/DictionaryBlazor/src/Api/WebApi/DictionaryBlazor.Api.WebApi/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "DictionaryDbConnectionString": "Server=.;Database=dictionaryblazor;Trusted_Connection=True;"
 }
