--- a/DictionaryBlazor/src/Common/DictionaryBlazor.Common/DictionaryBlazor.Common.csproj
+++ b/DictionaryBlazor/src/Common/DictionaryBlazor.Common/DictionaryBlazor.Common.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="..\..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
+  </ItemGroup>
+
 </Project>
